crates/toml/tests/snapshots/invalid/inline-table/no-comma-01.stderr
TOML parse error at line 1, column 14
  |
1 | t = {x = 3 y = 4}
  |              ^
extra assignment between key-value pairs, expected `,`

---
TOML parse error at line 1, column 16
  |
1 | t = {x = 3 y = 4}
  |                ^
missing comma between key-value pairs, expected `,`

---
TOML parse error at line 1, column 10
  |
1 | t = {x = 3 y = 4}
  |          ^^^
string values must be quoted, expected literal string

---
TOML parse error at line 1, column 17
  |
1 | t = {x = 3 y = 4}
  |                 ^
invalid literal string, expected `'`

---
TOML parse error at line 1, column 17
  |
1 | t = {x = 3 y = 4}
  |                 ^
invalid literal string, expected `'`
